# elsa

./: .gitignore  Cargo.toml  README.md  benchmark_commands.py  benchmark_config.toml  rustfmt.toml
.cargo/: config.toml
bin-utils/: Cargo.toml
bin-utils/src/: client.rs  lib.rs  server.rs
bindings/: Cargo.toml  build.rs
bindings/c++/: CMakeLists.txt  demo.cpp  demo.h  emp-base.cmake  interface.cpp  interface.h
bindings/src/: bindings.rs  lib.rs
block/: Cargo.toml
block/src/: lib.rs
block/src/x86/: gf.rs  mod.rs
bridge/: Cargo.toml
bridge/src/: client_server.rs  id_tracker.rs  lib.rs  mpc_conn.rs  perf_trace.rs  tcp_bridge.rs
client-baseline/: Cargo.toml
client-baseline-mp/: Cargo.toml
client-baseline-mp/benches/: msg_gen.rs
client-baseline-mp/src/: data_prep.rs  lib.rs  main.rs
client-baseline/benches/: msg_gen.rs
client-baseline/src/: main.rs  protocol.rs
client-l2/: Cargo.toml  bench.sh
client-l2/benches/: msg_gen.rs
client-l2/src/: main.rs  protocol.rs
client-mp/: Cargo.toml
client-mp-po2/: Cargo.toml
client-mp-po2/benches/: msg_gen.rs
client-mp-po2/src/: main.rs  protocol.rs
client-mp/benches/: msg_gen.rs
client-mp/src/: main.rs  protocol.rs
client-po2/: Cargo.toml
client-po2/benches/: msg_gen.rs
client-po2/src/: main.rs  protocol.rs
crypto-primitives/: Cargo.toml
crypto-primitives/src/: a2s.rs  b2a.rs  bitmul.rs  bits.rs  lib.rs  malpriv.rs  message.rs  square_corr.rs  uint.rs  utils.rs
crypto-primitives/src/block_crypto/: aes.rs  mitccrh.rs  mod.rs  rng.rs
crypto-primitives/src/cot/: client.rs  mod.rs  naive_rot.rs  rot.rs  server.rs
my-workspace-hack/: Cargo.toml
serialize/: Cargo.toml
serialize/src/: lib.rs  util.rs
server-baseline/: Cargo.toml
server-baseline-mp/: Cargo.toml
server-baseline-mp/src/: main.rs  server.rs
server-baseline/src/: main.rs  protocol.rs
server-l2/: Cargo.toml
server-l2/src/: client_msg.rs  lib.rs  main.rs  mpc.rs  utils.rs
server-mp/: Cargo.toml
server-mp-po2/: Cargo.toml
server-mp-po2/src/: client_msg.rs  lib.rs  main.rs  mpc.rs  utils.rs
server-mp/src/: client_msg.rs  main.rs  mpc.rs  utils.rs
server-po2/: Cargo.toml
server-po2/src/: client_msg.rs  main.rs  mpc.rs  utils.rs
