[package]
name = "bridge"
description = "library for TCP connection with client and server, and some core utilities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serialize = {path = "../serialize"}
thiserror = "1.0.30"
bytemuck = {version = "1.7.3", features = ["derive"]}

# asynchronous
tokio = {version = "^1.12.0", features = ["full"]} 
tokio-stream = "0.1"
futures = "0.3.17"
tracing = "0.1"

# serialize
serde = "1.0.130"
serde_derive = "1.0.130"
bytes = { version = "^1.1.0", features = ["serde"] }

rand = "^0.8.4"

itertools = "0.10"

# colored is used only by print-trace feature
colored = {version = "2.0.0", optional = true}
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[dev-dependencies]
tracing-subscriber = "0.2"


[features]
optional_tests = []
print-trace = ["colored"]
