[package]
name = "client-l2"
version = "0.1.0"
description = "L2 Client for Eiffel"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-primitives = { path = "../crypto-primitives" }
bridge = { path = "../bridge", features = ["print-trace"] }
bin-utils = { path = "../bin-utils", features = ["client"]}
client-po2 = { path = "../client-po2" } 
serialize = { path = "../serialize" }
tokio = { version = "^1.18", features = ["full"] }
clap = "3.0"
rayon = "1.5.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "^0.8.4"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[features]
no-ot = []

[[bench]]
name = "msg_gen"
harness = false

[dev-dependencies]
criterion = "0.3.4"