[package]
name = "client-mp"
version = "0.1.0"
description = "Malicious Privacy Client for Eiffel"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-primitives = { path = "../crypto-primitives" }
bridge = { path = "../bridge", features = ["print-trace"] }
bin-utils = { path = "../bin-utils", features = ["client"]}
serialize = { path = "../serialize" }
tokio = { version = "^1.18", features = ["full"] }
clap = "3.0"
rayon = "1.5.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "^0.8.4"

sha2 = "0.10.2"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[[bench]]
name = "msg_gen"
harness = false

[dev-dependencies]
criterion = "0.3.4"