[package]
name = "serialize"
description = "serialization library for eiffel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
bytemuck = {version = "1.7.3", features = ["derive","min_const_generics"]}

# serialize
serde = "1.0.130"
bincode = "1.3.3"
bytes = { version = "^1.1.0", features = ["serde"] }
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }

[dev-dependencies]
tracing-subscriber = "0.2"
