[package]
name = "server-baseline-mp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bridge = { path = "../bridge", features = ["print-trace"] }
crypto-primitives = { path = "../crypto-primitives" }
bin-utils = { path = "../bin-utils", features = ["server"] }
serialize = { path = "../serialize" }
iter_tools = "0.1.4"

clap = "3.0.0"
tracing-subscriber = "0.3"
rand = "^0.8.4"
prio = "0.8.2"

# asynchronous
tokio = { version = "^1.16", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"


# serialize
serde = "1"
serde_derive = "1"
bincode = "1.3.3"
bytes = { version = "1.1", features = ["serde"] }

# cpu-bound parallelism
rayon = "1.5.3"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
